# BlackBox

./: .gitignore  BlackBox.sln  PR2.sln  PR2.vcxproj  PR2.vcxproj.filters  README.html  README.md  README.txt  Vpu.drawio  aliases.sh  blackbox.conf  clean.sh  compile.sh  debug.sh  dist.lst  docker-compose.yml  entrypoint.sh  paradise.tfd  run.sh  webserver.lnk
PR2/: PR2.cpp  PR2.vcxproj  PR2.vcxproj.filters  Resource.aps  blackbox.cpp  ecosystem.h  resource.h
PR2/ecosystem/: animation.cpp  animation.hpp  asciitable.h  basicgame.cpp  basicgame.hpp  biome.cpp  biome.hpp  button.cpp  callbacks.cpp  camera.cpp  camera.hpp  codepage.cpp  color.cpp  color.hpp  command.hpp  console.cpp  console.hpp  curtain.cpp  curtain.hpp  cvar.cpp  cvar.hpp  dashboard.cpp  dashboard.hpp  direction.hpp  download.cpp  download.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  entitycontroller.cpp  entitycontroller.hpp  font.cpp  font.hpp  genericgame.hpp  glue.cpp  hud.cpp  hud.hpp  input.cpp  input.hpp  (+41 more)
PR2/genesis/: StdAfx.cpp  TfcPlayer.h  TurboFM.h  WaveOut.h
alpha/scripts/: main.py
data/: Cache.lnk  system.pak  toc.py
data/shaders/: vert.glsl
data/sprites/: bottle.gal
dialogeditor/: index.html
dialogeditor/include/: editor.js  node.compile.js  node.js  node.navcard.js  node.serializer.js  node.specialize.js
dialogeditor/skins/: base.css  child.css
doc/: index.html  update.bat
doc/include/: scripting.js  (+1 more)
scripts/: main.py  mainmenu.py  menu.py  stress.py
server/: index.html  index.php  webgl.js
src/: CMakeLists.txt  Dockerfile
src/client/: blackbox.cpp  packages.config
src/client/ecosystem/: animation.hpp  asciitable.h  camera.cpp  color.hpp  command.cpp  console.cpp  console.hpp  curtain.cpp  cvar.cpp  cvar.hpp  dashboard.cpp  download.cpp  download.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  entitycontroller.cpp  font.cpp  genericgame.cpp  genericgame.hpp  glue.cpp  hud.cpp  input.cpp  input.hpp  interp.cpp  interp.hpp  keymap.h  layer.cpp  layer.hpp  linux.hpp  material.cpp  material.hpp  music.cpp  music.hpp  pyxmacros.h  redirect.cpp  redirect.hpp  script.cpp  script.hpp  (+22 more)
src/client/genesis/: ReadMe.txt  TurboFM.h  stdafx.cpp  stdafx.h  tfdplayer.h  turbofm.h  waveout.h  waverec.h
src/client/genesis/Mame/: Ym2203_Emu.cpp
src/client/genesis/mame/: ym2203_emu.cpp
src/scripts/: mainmenu.py
src/scripts/menus/: blackbox.py  debug.py  tests.py  transition.py
(+402 files in other folders)
